OCaml 4.12, maintenance version
-------------------------------

### Bug fixes:

- #10107: Ensure modules compiled with -afl-instrument can still link on
  platforms without AFL support.
  (David Allsopp, review by Xavier Leroy)

- #9562, #367: Allow CSE of immutable loads across stores
  (Stephen Dolan, review by Mark Shinwell)

- #10349: Fix destroyed_at_c_call on RISC-V
  (Mark Shinwell, review by Nicolás Ojeda Bär)

- #8936: Per-function environment for Emit
  (Greta Yorsh, review by Vincent Laviron and Florian Angeletti)

- #10294, #10295: fix an assert-failure in pattern-matching compilation
  (Gabriel Scherer, review by Thomas Refis and Luc Maranget,
   report by Nicolás Ojeda Bär)

- #10310: configure's --enable-spacetime option now causes an error rather than
  being silently ignored.
  (David Allsopp, review by Gabriel Scherer)

- #10351: Fix DLL loading with binutils 2.36+ on mingw-w64
  (David Allsopp, review by Nicolás Ojeda Bär)

- #10449: Fix major GC work accounting (the GC was running too fast).
  (Damien Doligez, report by Stephen Dolan, review by Nicolás Ojeda Bär
   and Sadiq Jaffer)

- #10478: Fix segfault under Windows due to a mistaken initialization of thread
  ID when a thread starts.
  (David Allsopp, Nicolás Ojeda Bär, review by Xavier Leroy)

OCaml 4.12.0 (24 February 2021)
-------------------------------

### Supported platforms (highlights):

- #9699: add support for iOS and macOS on ARM 64 bits
  (Eduardo Rafael, review by Xavier Leroy, Nicolás Ojeda Bär
   and Anil Madhavapeddy, additional testing by Michael Schmidt)

### Standard library (highlights):

- #9797: Add Sys.mkdir and Sys.rmdir.
  (David Allsopp, review by Nicolás Ojeda Bär, Sébastien Hinderer and
   Xavier Leroy)

* #9765: add init functions to Bigarray.
  (Jeremy Yallop, review by Gabriel Scherer, Nicolás Ojeda Bär, and
   Xavier Leroy)

* #9668: List.equal, List.compare
  (This could break code using "open List" by shadowing
   Stdlib.{equal,compare}.)