@@ -1,6 +1,12 @@
 OCaml 4.12, maintenance version
 -------------------------------
 
+- #10433: Remove the distinction between 32-bit aligned and 64-bit aligned
+  64-bit floats in Cmm.memory_chunk.
+  (Greta Yorsh, review by Xavier Leroy)
+
+### Build system:
+
 ### Bug fixes:
 
 - #10107: Ensure modules compiled with -afl-instrument can still link on
